exception config update